made small adjustment to desktop version

--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,17 @@ nav li a:hover {
   }
 }
 @media only screen and (min-width: 1450px) {
+  .features-selection {
+    /*&:after {
+        content: '';
+        position: absolute;
+        width: 200px;
+        height: 20em;
+        background: url('../images/dots.svg') no-repeat;
+        left: 4.5em;
+        top: 2em;
+    }*/
+  }
   .features-selection:before {
     content: "";
     position: absolute;
@@ -334,14 +345,5 @@ nav li a:hover {
     background: var(--primary-color);
     left: 0;
     top: -4em;
-  }
-  .features-selection:after {
-    content: "";
-    position: absolute;
-    width: 200px;
-    height: 20em;
-    background: url("../images/dots.svg") no-repeat;
-    left: 4.5em;
-    top: 2em;
   }
 }/*# sourceMappingURL=main.css.map */
