--- a/css/main.scss
+++ b/css/main.scss
@@ -388,7 +388,7 @@ ul.features-list {
                 top: -4em;
             }
 
-            &:after {
+            /*&:after {
                 content: '';
                 position: absolute;
                 width: 200px;
@@ -396,6 +396,6 @@ ul.features-list {
                 background: url('../images/dots.svg') no-repeat;
                 left: 4.5em;
                 top: 2em;
-            }
+            }*/
         }
     }
